--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
   and
   <a href="https://github.com/clausreinke/typescript-tools.vim">typescript-tools.vim</a>
   </h2>
-  <em class="status">(status: active)</em>
+  <em class="status">(status: no longer active)</em>
 
   <p>
   TypeScript (Microsoft, October 2012) offers EcmaScript 6 features for
@@ -123,7 +123,7 @@
   <h2>
   <a href="http://clausreinke.github.com/js-tools/resources.html">Javascript development tools - resources</a>
   </h2>
-  <em class="status">(status: list active, resources inactive, need review)</em>
+  <em class="status">(status: no longer active)</em>
   <p>
   We started the <a
   href="https://groups.google.com/forum/#!aboutgroup/js-tools">js-tools mailing
