--- a/index.html
+++ b/index.html
@@ -24,26 +24,6 @@
 
     <div id="news">
     <span class="title">News</span>
-      <p>
-      <strong><a
-      href="https://github.com/clausreinke/typescript-tools">typescript-tools
-      v0.7.0</a></strong> available for testing (commandline access to
-      TypeScript language services, basis of Vim/Emacs/Sublime plugins),
-      supporting TypeScript v1.8.10.
-      </p>
-      <strong><a
-      href="https://github.com/clausreinke/typescript-tools.vim">typescript-tools.vim</a></strong>
-      available for testing (Vim plugin for typescript-tools), supporting
-      TypeScript v1.8.10.
-      </p>
-      <!--
-      <p>
-      <strong>typescript-tools v0.3.1</strong> released (commandline access to
-      TypeScript language services, basis of Vim/Emacs/Sublime plugins)
-      [<a href="https://www.npmjs.org/package/typescript-tools">npm</a>]
-      [<a href="https://github.com/clausreinke/typescript-tools">github</a>]
-      </p>
-      -->
     </div>
     <span id="new">
     [<a href="https://clausreinke.github.com/">Home</a>]
@@ -61,13 +41,15 @@
 <div id="sites">
 
 <div class="site" id="typescript-tools">
-I develop <strong>typescript-tools</strong>, a <a
+I used to develop <strong>typescript-tools</strong>, a <a
 href="https://github.com/clausreinke/typescript-tools">commandline server</a>
 and <a href="https://github.com/clausreinke/typescript-tools.vim">Vim
 plugin</a> for using <a href="http://www.typescriptlang.org/">TypeScript</a>
 Language Services (<em>types, jump-to-definition, completion, compiler
-errors</em>). Others have used this to build TypeScript plugins for Emacs and
-Sublime.
+errors</em>). Others used this to build TypeScript plugins for Emacs and
+Sublime. Since then, the typescript language services have come with their
+own server infrastructure, and the landscape of service-based tools has
+evolved considerably.
 </div>
 
 <div class="site" id="haskell">
