--- a/aboutme.html
+++ b/aboutme.html
@@ -35,6 +35,7 @@ PhD/MSc Computer Science (Dr.rer.nat/Diplom Informatik),
 Among other things, I have
 <ul>
 <li>...</li>
+<li>developed, maintained and extended web apps, with frontends in JavaScript, TypeScript, React and backends in Node/Express, Scala, Abap (the latter reading only, so far;-)</li>
 <li>developed Vim plugins and other tools to support TypeScript, JavaScript, and Haskell developers</li>
 <li>discovered that CPN (Coloured Petri Nets) and CHR (Constraint-Handling Rules) are two sides of the same coin</li>
 <li>initiated and completed (with two colleagues) an EPSRC-funded project to develop HaRe, the Haskell Refactorer</li>
