--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ are available online.
 <strong>I am a software toolsmith</strong>. I enjoy writing software that helps
 turning computers into useful tools, with a particular focus on writing tools
 for other software developers - from development tools all the way to
-programming languages. I have worked with Javascript/TypeScript (~4yrs/2yrs),
+programming languages. I have worked with Javascript/TypeScript (~7yrs/3yrs),
 Haskell (~14yrs), and more other programming languages than I can remember
 (past intensively used languages include C ~8yrs, Java, Perl, ...; on smaller
 scale, I also used languages like Prolog, Lisp, Erlang, ...), starting from way
@@ -95,9 +95,8 @@ though I've mostly seen it more as a way to distribute content than as something
 to play around with (so please pardon my lack of fancy design/animations/etc:-).
 </p>
 <p>
-My <a href="projects.html">recent projects</a> tend to be <em>Javascript
-projects</em> or <em>Vim support for Javascript and TypeScript developers</em>
-or WebApp-related technology experiments.  Their sources are likely to appear
+My <a href="projects.html">private projects</a> tend to be <em>Javascript
+projects</em> or WebApp-related technology experiments. Their sources are likely to appear
 on my Github account.
 </p>
 <p>
